# menucmd

./: .gitignore  MenuCMD Tutorial  README.md  README_old.md  TODO  __init__.py  menucmd tutorial.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_in_venv.bat  run_in_venv.ps1  setup.py
Git Exclude/: menucmd tut ex.py
Old/: SaveWindow(old).py
PyTools4Windows/: Batch.py  MenuCMD.py  SaveWindow.py  config.json  menutesting.py  open_windows.bat  remove_reg_keys.bat
PyTools4Windows/temp/: Batch.py  MenuCMD.py  SaveWindow.py  config.json
builtins/: builtins.py
dsl/: __init__.py  generate_spec.py  lines_to_dict.py  menu_dict.py  utils.py
lib/: MenuCMD.py  menucmd tut ex.py  menucmd.py  menutesting.py
macrolib/: jsonmacros.py  typemacros.py
menucmd/: __init__.py
menucmd/builtins/: __init__.py  builtins.py  returns.py
menucmd/cfgutil/: __init__.py  ansi_scheme.py  cfgutil.py  dataclasses.py
menucmd/dsl/: __init__.py  dict_to_objs.py  dict_to_py.py  lines_to_dict.py  menu_dict.py  parser.py  utils.py
menucmd/src/: __init__.py  ansi_scheme.py  bind.py  builtins.py  colors.py  global_objs.py  loggers.py  menu_item.py  menu_return.py  menucmd.py  result.py  test.py  trampoline.py  util.py
menucmd/tests/: dlstesting.mcmd  dsltesting.mcmd  dsltesting.py  dsltesting.spec  dsltesting_config.json  item_test.py  menutesting.mcmd  menutesting.py  notebook_test.py  testing_utils.py  trampoline_example.py  tramptesting.mcmd  (+1 more)
src/: ansi_scheme.py  menu_hooks.py  menucmd.py  result.py
tests/: dsltesting.mcmd  dsltesting.py  menutesting.py
(+17 files in other folders)
