[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "menucmd"
version = "1.2.3"
description = "Command line menu interface"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.6"

authors = [
    { name = "Casey Litmer", email = "litmerc@msn.com" }
]

license = { text = "MIT" }

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "macrolibs",
    "colorama==0.4.6"
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "wheel",
]

[project.urls]
Homepage = "https://github.com/Casey-Litmer/menucmd"

[tool.setuptools.packages.find]
where = ["."]